2. Optionspanel funktionalität hergestellt